page spacing issue improved

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 0;
+  left: 0; */
   width: 100%;
   z-index: 1000;
 }
@@ -23,9 +23,10 @@
   }
   
   .burger-menu {
-    position: absolute;
+    /* position: absolute;
     top: 20px;
-    left: 20px;
+    left: 20px; */
+    align-content: center;
     cursor: pointer;
     z-index: 1000; 
   }
@@ -73,15 +74,16 @@
   }
 
   .top-navbar {
-    position: fixed;
+    /* position: fixed;
     top: 0;
-    left: 0;
+    left: 0; */
     width: 100%;
     background-color: #171a2c;
     color: #f6f1ff;
     z-index: 1000;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
-    padding: 18px 50px;
+    /* Box shadow isn't showing consistantly on all pages */
+    /* box-shadow: 0 0 10px rgba(255, 255, 255, 0.7); */
+    padding: 10px;
     
   }
   
